#include <string>
#include <iostream>

class Bandera
{
private:
    /* data */
public:
    Bandera(/* args */) {}
    ~Bandera() {}
};

