#include <string>
#include <iostream>

class Fighter
{
private:
    /* data */
public:
    Fighter(/* args */) {}
    ~Fighter() {}
};
