#include <string>
#include <iostream>

class Credito
{
private:
    /* data */
public:
    Credito(/* args */) {}
    ~Credito() {}
};
