#include <string>
#include <iostream>

class Fondo
{
private:
    /* data */
public:
    Fondo(/* args */) {}
    ~Fondo() {}
};
