#include <string>
#include <iostream>

class NaveRoja
{
private:
    /* data */
public:
    NaveRoja(/* args */) {}
    ~NaveRoja() {}
};
