#include <string>
#include <iostream>

class OndaDeCaptura
{
private:
    /* data */
public:
    OndaDeCaptura(/* args */) {}
    ~OndaDeCaptura() {}
};
