#include <string>
#include <iostream>

class Score
{
private:
    /* data */
public:
    Score(/* args */) {}
    ~Score() {}
};
