#include <string>
#include <iostream>

class TableroDePuntos
{
private:
    /* data */
public:
    TableroDePuntos(/* args */) {}
    ~TableroDePuntos() {}
};
