#include <string>
#include <iostream>

class Juego
{
private:
    /* data */
public:
    Juego(/* args */) {}
    ~Juego() {}
};
