#include <string>
#include <iostream>

class Letrero
{
private:
    /* data */
public:
    Letrero(/* args */) {}
    ~Letrero() {}
};
