#include <string>
#include <iostream>

class Menu
{
private:
    /* data */
public:
    Menu(/* args */) {}
    ~Menu() {}
};

