#include <string>
#include <iostream>

class NaveAzul
{
private:
    /* data */
public:
    NaveAzul(/* args */) {}
    ~NaveAzul() {}
};
