#include <string>
#include <iostream>

class NaveMorada
{
private:
    /* data */
public:
    NaveMorada(/* args */) {}
    ~NaveMorada() {}
};
