#include <string>
#include <iostream>

class Puntos
{
private:
    /* data */
public:
    Puntos(/* args */) {}
    ~Puntos() {}
};
