#include <string>
#include <iostream>

class Vidas
{
private:
    /* data */
public:
    Vidas(/* args */) {}
    ~Vidas() {}
};
