#include <string>
#include <iostream>

class Limite
{
private:
    /* data */
public:
    Limite(/* args */) {}
    ~Limite() {}
};
