#include <string>
#include <iostream>

class Nave
{
private:
    /* data */
public:
    Nave(/* args */) {}
    ~Nave() {}
};
