#include <string>
#include <iostream>

class NaveVerde
{
private:
    /* data */
public:
    NaveVerde(/* args */) {}
    ~NaveVerde() {}
};
