#include <string>
#include <iostream>

class Proyectil
{
private:
    /* data */
public:
    Proyectil(/* args */) {}
    ~Proyectil() {}
};
